# timelayer

./: .gitignore  README.md  README.zh-CN.md  _test_pending.go
cmd/local-ai-web/: main.go
internal/app/: ask.go  auto_facts_intent.go  chat.go  chat_context.go  chat_context_audit.go  chat_debug.go  chat_entry.go  chat_system.go  config.go  db.go  dbtx.go  embedding_guard.go  embedding_search_reflect.go  fact_ops.go  fact_triple.go  facts_realtime.go  http_middleware.go  index_text.go  init.go  llm.go  logger.go  netutil.go  pending_facts.go  pending_facts_group.go  prompts.go  reindex.go  run.go  search.go  search_rerank.go  summary_daily.go  summary_guard.go  summary_monthly.go  summary_weekly.go  user_fact.go  user_fact_versioning.go  utils.go  web_commands.go  web_server.go
internal/app/web/: app.js  index.html  style.css
tools/rerank-http/: CMakeLists.txt  README.md  main.cpp
tools/rerank-proxy/: README.md  requirements.txt  rerank_proxy.py
